# CloudsPort

./: CMakeLists.txt  README.md  handover_1.txt
Source/: CMakeLists.txt  GranularProcessor.cpp  GranularProcessor.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
Source/DSP/: CloudsAudioBuffer.h
Source/Granular/: Grain.cpp  Grain.h  GranularPlayer.cpp  GranularPlayer.h
Source/Helpers/: Parameters.h  docStructure.xml
